--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CampusCompass — Guiding you to the right campus</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="CampusCompass — AI-powered college comparison platform for engineering aspirants. Compare placements, ROI, rankings, and more." />
+  <meta name="theme-color" content="#2563EB" />
+  <meta name="author" content="Naviksha" />
+  <meta property="og:title" content="CampusCompass — Guiding you to the right campus" />
+  <meta property="og:description"
+    content="Compare 25+ engineering colleges across placements, packages, NIRF rankings, courses, and campus life. Make data-driven decisions." />
+  <meta property="og:type" content="website" />
+  <title>CampusCompass — Guiding you to the right campus</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
