feat: rebrand CampusCompass to Naviksha AI
- Replace all CampusCompass references with Naviksha AI
- Remove 'Free' from hero badge and final CTA button
- Use logo.png (Naviksha AI sparkle icon) in navbar, footer, and CTA section
- Update browser tab title to 'Master Form | Naviksha AI'
- Update favicon to logo.png
- Update meta descriptions and OG tags

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="CampusCompass — AI-powered college comparison platform for engineering aspirants. Compare placements, ROI, rankings, and more." />
+    content="Naviksha AI — AI-powered college comparison platform for engineering aspirants. Compare placements, ROI, rankings, and more." />
   <meta name="theme-color" content="#2563EB" />
   <meta name="author" content="Naviksha" />
-  <meta property="og:title" content="CampusCompass — Guiding you to the right campus" />
+  <meta property="og:title" content="Master Form | Naviksha AI" />
   <meta property="og:description"
     content="Compare 25+ engineering colleges across placements, packages, NIRF rankings, courses, and campus life. Make data-driven decisions." />
   <meta property="og:type" content="website" />
-  <title>CampusCompass — Guiding you to the right campus</title>
+  <title>Master Form | Naviksha AI</title>
 </head>
 
 <body>
