feat: add OG image and social share meta tags for WhatsApp/Twitter
- Added og-image.png (1200x630) with 'One Form, 120+ Colleges' branding
- Added og:image, og:url, og:site_name meta tags
- Added Twitter Card meta tags (summary_large_image)
- Updated title and descriptions to focus on master form value prop

--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="description"
-    content="Naviksha AI — AI-powered college comparison platform for engineering aspirants. Compare placements, ROI, rankings, and more." />
+    content="One Form, 120+ Colleges. Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
   <meta name="theme-color" content="#2563EB" />
   <meta name="author" content="Naviksha" />
-  <meta property="og:title" content="Master Form | Naviksha AI" />
+
+  <!-- Open Graph / WhatsApp / Facebook -->
+  <meta property="og:title" content="Naviksha AI — One Form, 120+ Colleges" />
   <meta property="og:description"
-    content="Compare 25+ engineering colleges across placements, packages, NIRF rankings, courses, and campus life. Make data-driven decisions." />
+    content="Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
   <meta property="og:type" content="website" />
-  <title>Master Form | Naviksha AI</title>
+  <meta property="og:url" content="https://master-application-form.vercel.app/" />
+  <meta property="og:image" content="https://master-application-form.vercel.app/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="Naviksha AI" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Naviksha AI — One Form, 120+ Colleges" />
+  <meta name="twitter:description"
+    content="Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
+  <meta name="twitter:image" content="https://master-application-form.vercel.app/og-image.png" />
+
+  <title>Naviksha AI — One Form, 120+ Colleges</title>
 </head>
 
 <body>
