--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     content="Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://master-application-form.vercel.app/" />
-  <meta property="og:image" content="https://master-application-form.vercel.app/og-image.png" />
+  <meta property="og:image" content="https://master-application-form.vercel.app/og-image.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Naviksha AI" />
@@ -26,7 +26,7 @@
   <meta name="twitter:title" content="Naviksha AI — One Form, 120+ Colleges" />
   <meta name="twitter:description"
     content="Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
-  <meta name="twitter:image" content="https://master-application-form.vercel.app/og-image.png" />
+  <meta name="twitter:image" content="https://master-application-form.vercel.app/og-image.jpg" />
 
   <title>Naviksha AI — One Form, 120+ Colleges</title>
 </head>
