--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta name="description"
     content="One Form, 120+ Colleges. Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
   <meta name="theme-color" content="#2563EB" />
-  <meta name="author" content="Naviksha" />
+  <meta name="author" content="Applichoice" />
 
   <!-- Open Graph / WhatsApp / Facebook -->
-  <meta property="og:title" content="Naviksha AI — One Form, 120+ Colleges" />
+  <meta property="og:title" content="Applichoice — One Form, 120+ Colleges" />
   <meta property="og:description"
     content="Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://master-application-form.vercel.app/" />
-  <meta property="og:image" content="https://master-application-form.vercel.app/og-image.jpg" />
+  <!-- <meta property="og:url" content="https://applichoice.naviksha.co.in/" /> -->
+  <meta property="og:image" content="https://applichoice.naviksha.co.in/og-image.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Naviksha AI" />
