feat: Rebrand the product name from Naviksha AI to Applichoice and update associated "powered by" text on the landing page.

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   <meta property="og:image" content="https://applichoice.naviksha.co.in/og-image.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:site_name" content="Naviksha AI" />
+  <meta property="og:site_name" content="Applichoice — Powered by Naviksha AI" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Naviksha AI — One Form, 120+ Colleges" />
+  <meta name="twitter:title" content="Applichoice — One Form, 120+ Colleges" />
   <meta name="twitter:description"
     content="Stop filling repetitive applications. Submit once, apply everywhere — colleges curated to match your marks, preferences & achievements." />
-  <meta name="twitter:image" content="https://master-application-form.vercel.app/og-image.jpg" />
+  <meta name="twitter:image" content="https://applichoice.naviksha.co.in/og-image.jpg" />
 
-  <title>Naviksha AI — One Form, 120+ Colleges</title>
+  <title>Applichoice — One Form, 120+ Colleges</title>
 </head>
 
 <body>
